# nightShift

./: .gitignore  QUICKSTART.md  README.md  nightshift.yaml  pyproject.toml  setup.ps1  setup.sh  tasks.md
.nightshift/: project-context-chart.md  project-context.md
agents/: implementer.md  reviewer.md
docs/: artifact-review.md  bugfix_todo.md  bugs.md  config-reference.md  design.md  future_ideas.md  ideas.md  next_steps.md  troubleshooting.md  vibe.md  writer-and-coder.md
nightshift/: __init__.py  agents.py  artifacts.py  cli.py  commands.py  config.py  dependencies.py  errors.py  escalation.py  failures.py  git.py  init.py  integ.py  integ_report.py  integ_test.py  patches.py  pipeline.py  project_chart.py  repo_tools.py  reports.py  resources.py  retry_memory.py  runlog.py  safety.py  sandbox_run.py  semantic_index.py  stages.py  task_tests.py  tasks.py  telemetry.py  templates.py  terminal.py  version.py  web.py  writing_validators.py
nightshift/project_templates/tutorial-deaddrop/: README.md  pyproject.toml
nightshift/project_templates/tutorial-deaddrop/.nightshift/: tasks.md
nightshift/project_templates/tutorial-deaddrop/.nightshift/agents/: debugger.md  implementer.md  planner.md  reviewer.md  test-writer.md
nightshift/project_templates/tutorial-deaddrop/src/deaddrop_app/: __init__.py  app.py
nightshift/project_templates/tutorial-deaddrop/tests/: test_task001.py  test_task002.py  test_task003.py  test_task004.py  test_task005.py
tests/: __init__.py  test_agents.py  test_artifacts.py  test_cli.py  test_commands.py  test_config.py  test_git.py  (+19 more)
(+121 files in other folders)
