[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nightshift-deaddrop-target"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["flask"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = ".pytest_cache"
